--- a/index.html
+++ b/index.html
@@ -30,28 +30,37 @@
         <!-- renamed class to SEO-ORM-SMM -->
         <div class="SEO-ORM-SMM">
             <!-- added image description -->
-            <img src="./assets/images/search-engine-optimization.jpg" img alt="table with notepad, pens, and laptop" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" img alt="table with notepad, pens, and laptop"
+                class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                The dominance of mobile internet use means that users are searching for the right business as they
+                travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
+                your visibility and find the right customers for your business.
             </p>
         </div>
         <!-- renamed class to SEO-ORM-SMM -->
         <div id="online-reputation-management" class="SEO-ORM-SMM">
             <!-- added image description -->
-            <img src="./assets/images/online-reputation-management.jpg" img alt="graphs and charts on open laptop" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" img alt="graphs and charts on open laptop"
+                class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                The web is full of opinions, and some of these can be negative. Social media allows anyone with an
+                internet connection to say whatever they want about your business. Online Reputation Management gives
+                you the control over what potential customers see when they search for your business.
             </p>
         </div>
         <!-- renamed class to SEO-ORM-SMM -->
         <div id="social-media-marketing" class="SEO-ORM-SMM">
             <!-- added image description -->
-            <img src="./assets/images/social-media-marketing.jpg" img alt="work meeting with social media icons on table" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" img
+                alt="work meeting with social media icons on table" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                Social media continues to have a sizable influence on buying habits. Social media marketing helps you
+                determine which platforms are suited to your brand, using analytics to find the right markets and
+                increase your lead generation.
             </p>
         </div>
     </div>
@@ -62,7 +71,8 @@
             <!-- added image description -->
             <img src="./assets/images/lead-generation.png" img alt="productivity to money icon" />
             <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+                Inbound strategies for lead generation require less work for your business, bringing customers directly
+                to your website.
             </p>
         </div>
         <!-- renamed to benefit-child -->
@@ -71,7 +81,8 @@
             <!-- added image description -->
             <img src="./assets/images/brand-awareness.png" img alt="lightbulb idea transmission icon" />
             <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+                Users find your business through paid and organic searches, increasing the search ranking and visibility
+                for your business.
             </p>
         </div>
         <!-- renamed to benefit-child -->
@@ -80,7 +91,8 @@
             <!-- added image description -->
             <img src="./assets/images/cost-management.png" img alt="efficient spending icon" />
             <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+                As the search ranking for your business increases, your advertising costs decrease, and you no longer
+                need to advertise your page.
             </p>
         </div>
     </div>
